--- a/week0/index.html
+++ b/week0/index.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="./index.html">
+
 <link href='https://fonts.googleapis.com/css?family=Almendra' rel='stylesheet'>
 
 <div class="sticky" style="z-index:4" align="middle">
