--- a/week0/index.html
+++ b/week0/index.html
@@ -1,5 +1,12 @@
-<link rel="stylesheet" href="./index.html">
+<!DOCTYPE html>
+<html>
 
+<head>
+    <title>Homework week 0</title>
+    <link rel="stylesheet" type="text/css" href="main.css">
+</head>
+
+<body>  
 <link href='https://fonts.googleapis.com/css?family=Almendra' rel='stylesheet'>
 
 <div class="sticky" style="z-index:4" align="middle">
@@ -119,3 +126,6 @@
   <p align="middle">Experimental page by Karam Ajaj<br> Contact information: <a href="karam.ajaj@hotmail.com">
     karam.ajaj@hotmail.com</a>.</p>
 </div>
+  
+  </body>
+</html>
