--- a/week0/index.html
+++ b/week0/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Homework week 0</title>
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>  
