--- a/week1/index.html
+++ b/week1/index.html
@@ -3,8 +3,8 @@
    <head>
       <title>My Resume</title>
       <meta charset="utf-8">
-      <link rel="stylesheet" href="./reset.css">
-      <link rel="stylesheet" href="./main.css">
+      <link rel="stylesheet" href="reset.css">
+      <link rel="stylesheet" href="main.css">
    </head>
    <body>
       <div class="container">
