--- a/week1/index.html
+++ b/week1/index.html
@@ -4,7 +4,7 @@
       <title>My Resume</title>
       <meta charset="utf-8">
       <link rel="stylesheet" href="reset.css">
-      <link rel="stylesheet" href="main.css">
+      <link rel="stylesheet" href="style.css">
    </head>
    <body>
       <div class="container">
