--- a/week3/index.html
+++ b/week3/index.html
@@ -31,19 +31,19 @@
             <p>4 principles for creating video ads that drive conversions</p>
         </div>
         <div class="flex-item1">
-            <img class="image" src="./img/2.jpg" alt="img">
+            <img class="image" src="img/2.jpg" alt="img">
             <p>Measurement matters: Laying a foundation for better measurement, today and tomorrow</p>
         </div>
         <div class="flex-item1">
-            <img class="image" src="./img/3.jpg" alt="img">
+            <img class="image" src="img/3.jpg" alt="img">
             <p>How one retailer is shifting to an AI-first mentality</p>
         </div>
         <div class="flex-item1">
-            <img class="image" src="./img/4.jpg" alt="img">
+            <img class="image" src="img/4.jpg" alt="img">
             <p>How mobile became a power tool in idle moments</p>
         </div>
         <div class="flex-item1">
-            <img class="image" src="./img/5.jpg" alt="img">
+            <img class="image" src="img/5.jpg" alt="img">
             <p>How one car dealer shows what’s best for the customer is best for business</p>
         </div>
         <div class="flex-item1">
@@ -80,22 +80,22 @@
     <h3>Tools for marketers</h3>
     <div id="flex-container2">
         <div class="flex-item2">
-            <img class="image" src="./img/7.png" alt="img">
+            <img class="image" src="img/7.png" alt="img">
             <h4>Shopping Insights</h4>
             <p>Explore trends and popularity of products across the U.S.</p>
         </div>
         <div class="flex-item2">
-            <img class="image" src="./img/8.jpg" alt="img">
+            <img class="image" src=/img/8.jpg" alt="img">
             <h4>Shopping Insights</h4>
             <p>Explore trends and popularity of products across the U.S.</p>
         </div>
         <div class="flex-item2">
-            <img class="image" src="./img/9.png" alt="img">
+            <img class="image" src="img/9.png" alt="img">
             <h4>Shopping Insights</h4>
             <p>Explore trends and popularity of products across the U.S.</p>
         </div>
         <div class="flex-item2">
-            <img class="image" src="./img/10.png" alt="img">
+            <img class="image" src="img/10.png" alt="img">
             <h4>Shopping Insights</h4>
             <p>Explore trends and popularity of products across the U.S.</p>
         </div>
